--- a/src/components/CardType3/Card.css
+++ b/src/components/CardType3/Card.css
@@ -83,6 +83,7 @@
     text-decoration: none;
     border-radius: 3px;
     padding: 5px;
+    cursor:pointer;
 }
 .cardFooter {
     border-top: 1px solid #0000001C;
