--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+.css-13jasdf{
+  margin-right: 0px;
+  width: 160px;
+  border:1px red solid;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
